# spiderbot-rust

./: .editorconfig  .gitmodules  Cargo.toml  LICENSE  README.md  Ravedude.toml  rust-toolchain.toml
.cargo/: config.toml
blink/: Cargo.toml
radio-uno/: Cargo.toml
radio-uno/src/: circular_buffer.rs  error.rs  lib.rs  main.rs  software_serial.rs
robot/: Cargo.toml
robot-core/: Cargo.toml
robot-core/src/: lib.rs  robot.rs  subsystem.rs
robot-impl/: Cargo.toml
robot-impl/src/: lib.rs  main.rs  spiderbot.rs
robot/src/: command.rs  led.rs  lib.rs  main.rs  millis.rs  spiderbot.rs  subsystem.rs
robot/src/command/: blink.rs
robot/src/subsystem/: onboard_leds_buttons.rs
srxl2/: Cargo.toml  README.md
srxl2/src/: bind.rs  bus.rs  channel.rs  control.rs  crc.rs  device.rs  error.rs  flags.rs  fns.rs  handshake.rs  id.rs  internal.rs  interpreter.rs  lib.rs  packet.rs  param.rs  receiver.rs  rssi.rs  telemetry.rs  tx.rs  types.rs  vtx.rs
srxl2/src/packet/: bind.rs  channel.rs  control.rs  fwd_pgm.rs  handshake.rs  param.rs  rssi.rs  telemetry.rs
