[package]
name = "blink"
edition = "2021"

[[bin]]
name = "blink"
test = false
bench = false

[dependencies]
panic-halt = { workspace = true }
ufmt = { workspace = true }
nb = { workspace = true }
embedded-hal = { workspace = true }
arduino-hal = { workspace = true }

[build-dependencies]
proc-macro2 = { workspace = true }
