[package]
name = "robot-core"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[dependencies]
panic-halt = { workspace = true }
ufmt = { workspace = true }
nb = { workspace = true }
embedded-hal = { workspace = true }
arduino-hal = { workspace = true }

[build-dependencies]
proc-macro2 = { workspace = true }
