[package]
name = "srxl2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "srxl2"
test = false
bench = false

[features]
default = ["1_bus", "crc_speed", "stm_f3"]
1_bus = []
2_bus = []
4_bus = []
8_bus = []
crc_speed = []
crc_size = []
crc_stm_hw = []
crc_stm_hal = []
stm_f3 = []
stm_f7 = []
include_fwdpgm = []

[dependencies]
zerocopy = { version = "0.8.23", features = ["derive"] }